--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
       name="viewport"
       content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0"
     />
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>ROB</title>
     <link rel="stylesheet" href="https://use.typekit.net/soy1dbs.css" />
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <link rel="icon" href="<%= BASE_URL %>icon-circle.png" />
     <link
       rel="stylesheet"
       type="text/css"
